# canonical-microcloud-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-snap.txt  snapcraft.yaml
.github/workflows/: publish-docker.yml  validate.yml
ansible/: site.yml
ansible/inventories/lab/: hosts.ini
deploy/docker/: canonical-microcloud-agent-operator.sudoers.example  docker-compose.host-operator.yml  host-operator.env.example
deploy/systemd/: canonical-microcloud-agent-kernel.service  canonical-microcloud-agent.env.example
docs/agent/: microcloud-agent-spec.md
docs/api/: reference.md
docs/architecture/: runtime-boundary.md
docs/operations/: approval-model.md  docker-deployment.md  features.md  setup.md  usage-and-testing.md
scripts/: docker-consult-setup.sh
services/agent-runtime/: agent-profile.md
services/tool-adapters/: contracts.md
services/workflows/: microcloud-operator-workflows.md
src/microcloud_agent/: __init__.py  adapters.py  agentkernel_app.py  agentkernel_bridge.py  api.py  chat.py  cli.py  config.py  consult.py  mattermost.py  memory.py  models.py  oidc.py  openapi_client.py  policy.py  runner.py  service.py  workflows.py
tests/: test_agentkernel_bridge.py  test_chat.py  test_consult.py  test_mattermost.py  test_oidc.py  test_openapi_client.py  test_policy.py  test_runner.py  test_service.py  test_testcontainers_integration.py  test_tooling_adapters.py  test_workflows.py
tests/support/: docker_exec.py
ui/nextjs-chat-template/: package.json  tsconfig.json
website/: index.html  styles.css
website/deploy/: index.html
website/invoke/: app.js  index.html
website/platform/: index.html
website/runtime/: index.html
(+3 files in other folders)
