[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canonical-microcloud-agent"
version = "0.1.0"
description = "Local operator agent for Canonical MicroCloud workflows"
requires-python = ">=3.11"

[project.optional-dependencies]
agent-kernel = ["agentkernel[api]>=0.3.3", "python-multipart>=0.0.20"]

[project.scripts]
microcloud-agent = "microcloud_agent.cli:main"
microcloud-agent-kernel = "microcloud_agent.agentkernel_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
